样式小修改

--- a/step5.html
+++ b/step5.html
@@ -26,6 +26,7 @@
 				left:0;
             }
             button{
+            	font-size:20px;
             	margin:5px 0 0 5px;
             	border:1px solid #d1d1d1;
             	background-color:#fff;
