--- a/step5.html
+++ b/step5.html
@@ -118,7 +118,7 @@
             function step8(){
                 if(checkStep8()){
                     isAutoReset = false;
-                    console.log('finished');
+                    console.log('end autoResetV1');
                     return;
                 }
 
@@ -133,7 +133,6 @@
                 step8Case2(3);
 
                 if(!isRotating&&!checkStep8()){
-                    console.log('step8-others');
                     rotate801(0);
                 }
             }
@@ -238,7 +237,6 @@
                     var xLine = rotateAxisByYLine(XLine,rotateNum);
                     if(getFaceColorByVector(cube2,xLine)==getFaceColorByVector(cube20,xLine)&&
                         getFaceColorByVector(cube2,xLine)!=getFaceColorByVector(cube11,xLine)){
-                        console.log('step8Case1');
                         rotate801(rotateNum);
                     }
                 }
@@ -258,7 +256,6 @@
                         getFaceColorByVector(cube11,xLine)==getFaceColorByVector(cube20,xLine)&&
                         getFaceColorByVector(cube0,zLine)!=getFaceColorByVector(cube1,zLine)&&
                         getFaceColorByVector(cube20,xLine)!=getFaceColorByVector(cube20,xLine)){
-                        console.log('step8Case2');
                         rotate802(rotateNum);
                     }
                 }
@@ -267,7 +264,6 @@
             function step7(){
             	if(checkStep7()){
                     currentStep = 8;
-                    console.log('start step8');
                     step8();
                     return;
                 }
@@ -286,7 +282,6 @@
                  * 1、有两个对应的面顶棱完成，另外两个对应的面顶棱没有；
                  */
                 if(!isRotating&&!checkStep7()){
-                    console.log('step7-others');
                     u(0);
                 }
             }
@@ -398,7 +393,6 @@
             function step6(){
             	if(checkStep6()){
             		currentStep = 7;
-            		console.log('start step7');
             		step7();
             		return;
             	}
@@ -500,7 +494,6 @@
             function step5(){
             	if(checkStep5()){
             		currentStep = 6;
-            		console.log('start step6');
             		step6();
             		return;
             	}
@@ -636,7 +629,6 @@
             function step4(){
             	if(checkStep4()){
             		currentStep = 5;
-            		console.log('start step5');
             		step5();
             		return;
             	}
@@ -857,17 +849,18 @@
 	            	var yLine2Color = getFaceColorByVector(cube2,yLine);
 
 	            	if(getFaceColorByVector(cube2,xLine)==bottomColor){
-                        console.log('step3Case1');
 	            		if(getFaceColorByVector(cube4,zLine)==zLine2Color&&
 	            		   getFaceColorByVector(cube7,zLine)==zLine2Color&&	
 	            		   getFaceColorByVector(cube14,xLine)==yLine2Color&&
 	            		   getFaceColorByVector(cube17,xLine)==yLine2Color){
+	            		   	console.log('step3Case1-1');
 	            			R(rotateNum,function(){
 	            				U(rotateNum,function(){
 	            					r(rotateNum)
 	            				})
 	            			})
 	            		}else{
+	            			console.log('step3Case1-2');
 	            			u(rotateNum,function(){
                                 rotateNum++;
 	            				if(rotateNum>=4){
@@ -897,17 +890,18 @@
 	            	var xLine2Color = getFaceColorByVector(cube2,xLine);
 
 	            	if(getFaceColorByVector(cube2,zLine)==bottomColor){
-                        console.log('step3Case2');
 	            		if(getFaceColorByVector(cube4,zLine)==yLine2Color&&
 	            		   getFaceColorByVector(cube7,zLine)==yLine2Color&&
 	            		   getFaceColorByVector(cube14,xLine)==xLine2Color&&
 	            		   getFaceColorByVector(cube17,xLine)==xLine2Color){
+	            		   	console.log('step3Case2-1');
 	            			f(rotateNum,function(){
 	            				u(rotateNum,function(){
 	            					F(rotateNum)
 	            				})
 	            			})
 	            		}else{
+	            			console.log('step3Case2-2');
 	            			u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -937,11 +931,11 @@
             		var xLine2Color = getFaceColorByVector(cube2,xLine);
 
             		if(getFaceColorByVector(cube2,yLine)==bottomColor){
-                        console.log('step3Case3');
             			if(getFaceColorByVector(cube14,xLine)==zLine2Color&&
             			   getFaceColorByVector(cube17,xLine)==zLine2Color&&
             			   getFaceColorByVector(cube4,zLine)==xLine2Color&&
             			   getFaceColorByVector(cube7,zLine)==xLine2Color){
+            			   	console.log('step3Case3-1');
             			   	f(rotateNum,function(){
             			   		U(rotateNum,function(){
             			   			F(rotateNum,function(){
@@ -956,6 +950,7 @@
             			   		})
             			   	})
             			}else{
+            				console.log('step3Case3-2');
         					u(rotateNum,function(){
                                 rotateNum++;
                                 if(rotateNum>=4){
@@ -986,7 +981,7 @@
 	            	if(getFaceColorByVector(cube8,xLine)==bottomColor){
 	            		if(getFaceColorByVector(cube17,xLine)==zLine8Color&&
 		        			getFaceColorByVector(cube14,xLine)==zLine8Color){
-	            			console.log('step3Case4');
+	            			console.log('step3Case4-1');
 		        			f(rotateNum,function(){
 		            			U(rotateNum,function(){
 		            				F(rotateNum,function(){
@@ -1000,15 +995,18 @@
 		            		})
 	                    }else if(getFaceColorByVector(cube17,xLine)==xLine11Color&&
 		        				getFaceColorByVector(cube14,xLine)==xLine11Color){
+	                    	console.log('step3Case4-2');
 	                    	R(rotateNum,function(){
 	                    		R(rotateNum);
 	                    	})
 	                    }else if(getFaceColorByVector(cube1,zLine)==zLine4Color&&
 	                    	getFaceColorByVector(cube7,zLine)==zLine4Color){
+	                    	console.log('step3Case4-3');
 	                    	f(rotateNum,function(){
 	                    		f(rotateNum)
 	                    	})
 	                    }else{
+	                    	console.log('step3Case4-4');
 	                    	u(rotateNum);
 	                    }
 	            	}
@@ -1032,7 +1030,7 @@
             		if(getFaceColorByVector(cube8,zLine)==bottomColor){
             			if(getFaceColorByVector(cube7,zLine)==xLine8Color&&
 	            			getFaceColorByVector(cube4,zLine)==xLine8Color){
-	        				console.log('step3Case5');
+	        				console.log('step3Case5-1');
 	            			R(rotateNum,function(){
 		            			u(rotateNum,function(){
 		            				r(rotateNum,function(){
@@ -1046,15 +1044,18 @@
 		            		})
 	                    }else if(getFaceColorByVector(cube17,xLine)==xLine11Color&&
 		        				getFaceColorByVector(cube14,xLine)==xLine11Color){
+	                    	console.log('step3Case5-2');
 	                    	R(rotateNum,function(){
 	                    		R(rotateNum);
 	                    	})
 	                    }else if(getFaceColorByVector(cube1,zLine)==zLine4Color&&
 	                    	getFaceColorByVector(cube7,zLine)==zLine4Color){
+	                    	console.log('step3Case5-3');
 	                    	f(rotateNum,function(){
 	                    		f(rotateNum)
 	                    	})
 	                    }else{
+	                    	console.log('step3Case5-4');
 	                    	u(rotateNum);
 	                    }
             		}
@@ -1066,19 +1067,19 @@
             		var cube1 = getCubeByIndex(1,rotateNum);
             		var cube4 = getCubeByIndex(4,rotateNum);
             		var cube7 = getCubeByIndex(7,rotateNum);
-            		var yLine = rotateAxisByYLine(YLine,rotateNum);
+            		var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             		var zLine = rotateAxisByYLine(ZLine,rotateNum);
             		var zLine1Color = getFaceColorByVector(cube1,zLine);
-            		if(getFaceColorByVector(cube1,yLine)==bottomColor&&
-            			getFaceColorByVector(cube4,zLine)==getFaceColorByVector(cube7,zLine)){
-            			if(getFaceColorByVector(cube4,zLine)!=zLine1Color){
-            				u(rotateNum);
-            			}else{
-            				f(rotateNum,function(){
-            					f(rotateNum);
-            				})
-            			}
-            		}
+        			if(getFaceColorByVector(cube4,zLine)==zLine1Color&&
+        				getFaceColorByVector(cube7,zLine)==zLine1Color){
+        				console.log('step3Case6-2');
+        				f(rotateNum,function(){
+        					f(rotateNum);
+        				})
+        			}else{
+        				console.log('step3Case6-1');
+        				u(rotateNum);
+        			}
             	}
             }
             //判断是否完成第三步底角归位
