--- a/step5.html
+++ b/step5.html
@@ -822,10 +822,7 @@
                 step3Case5(2);
                 step3Case5(3);
 
-                step3Case6(0);
-                step3Case6(1);
-                step3Case6(2);
-                step3Case6(3);
+                step3Case6();
             }
             //底角归位第一种情况
             function step3Case1(rotateNum){
@@ -964,15 +961,9 @@
             		var cube8 = getCubeByIndex(8,rotateNum);
 	            	var cube17 = getCubeByIndex(17,rotateNum);
 	            	var cube14 = getCubeByIndex(14,rotateNum);
-	            	var cube11 = getCubeByIndex(11,rotateNum);
-	            	var cube1 = getCubeByIndex(1,rotateNum);
-	            	var cube4 = getCubeByIndex(4,rotateNum);
-	            	var cube7 = getCubeByIndex(7,rotateNum);
 	            	var xLine = rotateAxisByYLine(XLine,rotateNum);
 	            	var zLine = rotateAxisByYLine(ZLine,rotateNum);
 	            	var zLine8Color = getFaceColorByVector(cube8,zLine);
-	            	var xLine11Color = getFaceColorByVector(cube11,xLine);
-	            	var zLine4Color = getFaceColorByVector(cube4,zLine);
 
 	            	if(getFaceColorByVector(cube8,xLine)==bottomColor){
 	            		if(getFaceColorByVector(cube17,xLine)==zLine8Color&&
@@ -989,21 +980,8 @@
 		            				})
 		            			})
 		            		})
-	                    }else if(getFaceColorByVector(cube17,xLine)==xLine11Color&&
-		        				getFaceColorByVector(cube14,xLine)==xLine11Color){
-	                    	console.log('step3Case4-2');
-	                    	R(rotateNum,function(){
-	                    		R(rotateNum);
-	                    	})
-	                    }else if(getFaceColorByVector(cube1,zLine)==zLine4Color&&
-	                    	getFaceColorByVector(cube7,zLine)==zLine4Color){
-	                    	console.log('step3Case4-3');
-	                    	f(rotateNum,function(){
-	                    		f(rotateNum)
-	                    	})
 	                    }else{
-	                    	console.log('step3Case4-4');
-	                    	u(rotateNum);
+	                    	step3Case6();
 	                    }
 	            	}
             	}
@@ -1012,17 +990,11 @@
             function step3Case5(rotateNum){
             	if(!isRotating){
             		var cube8 = getCubeByIndex(8,rotateNum);
-	            	var cube17 = getCubeByIndex(17,rotateNum);
-	            	var cube14 = getCubeByIndex(14,rotateNum);
-	            	var cube11 = getCubeByIndex(11,rotateNum);
-	            	var cube1 = getCubeByIndex(1,rotateNum);
 	            	var cube4 = getCubeByIndex(4,rotateNum);
 	            	var cube7 = getCubeByIndex(7,rotateNum);
 	            	var xLine = rotateAxisByYLine(XLine,rotateNum);
 	            	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             		var xLine8Color = getFaceColorByVector(cube8,xLine);
-            		var xLine11Color = getFaceColorByVector(cube11,xLine);
-	            	var zLine4Color = getFaceColorByVector(cube4,zLine);
             		if(getFaceColorByVector(cube8,zLine)==bottomColor){
             			if(getFaceColorByVector(cube7,zLine)==xLine8Color&&
 	            			getFaceColorByVector(cube4,zLine)==xLine8Color){
@@ -1038,45 +1010,63 @@
 		            				})
 		            			})
 		            		})
-	                    }else if(getFaceColorByVector(cube17,xLine)==xLine11Color&&
-		        				getFaceColorByVector(cube14,xLine)==xLine11Color){
-	                    	console.log('step3Case5-2');
-	                    	R(rotateNum,function(){
-	                    		R(rotateNum);
-	                    	})
-	                    }else if(getFaceColorByVector(cube1,zLine)==zLine4Color&&
-	                    	getFaceColorByVector(cube7,zLine)==zLine4Color){
-	                    	console.log('step3Case5-3');
-	                    	f(rotateNum,function(){
-	                    		f(rotateNum)
-	                    	})
 	                    }else{
-	                    	console.log('step3Case5-4');
-	                    	u(rotateNum);
+	                    	step3Case6();
 	                    }
             		}
             	}
             }
             //底角归位第六种情况
-            function step3Case6(rotateNum){
+            function step3Case6(){
             	if(!isRotating){
-            		var cube1 = getCubeByIndex(1,rotateNum);
-            		var cube4 = getCubeByIndex(4,rotateNum);
-            		var cube7 = getCubeByIndex(7,rotateNum);
-            		var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
-            		var zLine = rotateAxisByYLine(ZLine,rotateNum);
-            		var zLine1Color = getFaceColorByVector(cube1,zLine);
-        			if(getFaceColorByVector(cube4,zLine)==zLine1Color&&
-        				getFaceColorByVector(cube7,zLine)==zLine1Color){
+
+            		var cube1 = getCubeByIndex(1);
+            		var cube4 = getCubeByIndex(4);
+            		var cube7 = getCubeByIndex(7);
+            		var ZLine1Color = getFaceColorByVector(cube1,ZLine);
+
+            		var cube11 = getCubeByIndex(11);
+            		var cube14 = getCubeByIndex(14);
+            		var cube17 = getCubeByIndex(17);
+            		var XLine11Color = getFaceColorByVector(cube11,XLine);
+
+            		var cube19 = getCubeByIndex(19);
+            		var cube22 = getCubeByIndex(22);
+            		var cube25 = getCubeByIndex(25);
+            		var ZLineAd19Color = getFaceColorByVector(cube19,ZLineAd);
+
+            		var cube9 = getCubeByIndex(9);
+            		var cube12 = getCubeByIndex(12);
+            		var cube15 = getCubeByIndex(15);
+            		var XLineAd9Color = getFaceColorByVector(cube9,XLineAd);
+
+        			if(getFaceColorByVector(cube4,ZLine)==ZLine1Color&&
+        				getFaceColorByVector(cube7,ZLine)==ZLine1Color){
+        				console.log('step3Case6-1');
+        				f(0,function(){
+        					f(0);
+        				})
+        			}else if(getFaceColorByVector(cube14,XLine)==XLine11Color&&
+        				getFaceColorByVector(cube17,XLine)==XLine11Color){
         				console.log('step3Case6-2');
-        				f(rotateNum,function(){
-        					f(rotateNum);
+        				r(0,function(){
+        					r(0);
+        				})
+        			}else if(getFaceColorByVector(cube22,ZLineAd)==ZLineAd19Color&&
+        				getFaceColorByVector(cube25,ZLineAd)==ZLineAd19Color){
+        				console.log('step3Case6-3');
+        				b(0,function(){
+        					b(0)
+        				})
+        			}else if(getFaceColorByVector(cube12,XLineAd)==XLineAd9Color&&
+        				getFaceColorByVector(cube15,XLineAd)==XLineAd9Color){
+        				console.log('step3Case6-4');
+        				l(0,function(){
+        					l(0);
         				})
         			}else{
-        				console.log('step3Case6-1');
-        				u(rotateNum,function(){
-        					step3Case6(rotateNum);
-        				});
+        				console.log('step3Case6-5');
+        				u(0);
         			}
             	}
             }
